# serverless-rust-test

./: .gitignore  package.json  serverless.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
project/: Cargo.toml
