[package]
name = "serverless-rust-test"
version = "0.1.0"
edition = "2021"


# Specify multiple binaries here
# Each binary is a lambda entry point
[[bin]]
name = "hello-world"

[[bin]]
name = "api-gateway"


[dependencies]
serde_json = "1"

lambda_runtime = "0.11.2"
lambda_http = "0.11.1"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.201", features = ["derive"] }
tap = "1.0.1"
